force-app/main/default/objects/Case/fields/Is_Adversarial__c.field-meta.xml
<CustomField>
    <fullName>Is_Adversarial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Adversarial</label>
    <type>Checkbox</type>
</CustomField>