force-app/main/default/objects/Case/fields/Sensitivity_Label__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Label__c</fullName>
    <label>Sensitivity Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sensitivity_Levels</valueSetName>
    </valueSet>
</CustomField>