force-app/main/default/objects/Case/fields/Test_Payload_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Payload_Type__c</fullName>
    <label>Test Payload Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Payload_Type</valueSetName>
    </valueSet>
</CustomField>